# $Id: Makefile.am,v 1.3 2011/05/23 06:42:59 ralf Exp $

SUBDIRS =
SUBDIRS += arm
SUBDIRS += arm-eabi
SUBDIRS += avr
SUBDIRS += bfin
SUBDIRS += h8300
SUBDIRS += i386
SUBDIRS += lm32
SUBDIRS += m32c
SUBDIRS += m32r
SUBDIRS += m68k
SUBDIRS += mips
SUBDIRS += mipstx39
SUBDIRS += powerpc
SUBDIRS += sh
SUBDIRS += sparc

SUBDIRS += sparc64
